Update on Overleaf.

--- a/paper.tex
+++ b/paper.tex
@@ -59,23 +59,20 @@ In this paper, we suggest tackling sensitivity to spatial conditions by generati
 
 %%%%%%%%%%%%%%%%%%%%%%
 \subsection{Why spatial patterns are expected to impact social simulations}
+\comment[MLT]{Je me demande si tout ce qui vient après jusqu'à la littérature review sur les attempts de prise en compte de l'effet de la configuration spatiale sur le comportement et les résultats des modèles ne serait pas mieux en intro? Ca ferait une longue intro mais ça éviterait de trop se répéter?}
+An urban system consists of a large number of social agents that interact with each other at a microscopic level in a system-time that evolves irreversibly creating temporal and cumulative effects. Self-organization has been shown to be a central feature of urban systems~\citep{AllenSanglier1981,Portugali2000}, and emergent properties at qualitatively differentiated scales~\citep{AzizAlaouiBertelle2009} must be obtained through simulation methods~\citep{Wu2002,Batty2007}. In that frame, complexity is partially due to bifurcations \citep{Wilson1981} which are determinant in spatial systems~\citep{Wilson2002}. 
 
-An urban system consists of a large number of social agents that interact with each other at a microscopic level in a system-time that evolves irreversibly creating temporal and cumulative effects. Self-organization has been shown to be a central feature of urban systems~\citep{AllenSanglier1981,Portugali2000}, and emergent properties at qualitatively differentiated scales~\citep{AzizAlaouiBertelle2009} must be obtained through simulation methods~\citep{Wu2002,Batty2007}. In that frame, complexity is partially due to bifurcations \citep{Wilson1981} which are determinant in spatial systems~\citep{Wilson2002}. In spatially explicit simulation models, the non-linearity of local interactions is therefore very likely to sublimate small perturbations in the initial spatial setting, making it difficult to interprete the resulting global structures. \comment[JR]{je suis pour garder le passage sur la non-ergodicité (commenté ci-après) ; ça vous parait trop abstrait ?}\comment[MLT]{Non, mais je pense que la seconde phrase pourrait être reformulée/développée pour mieux raccrocher avec le reste, qu'en penses-tu?}
- % A crucial aspect of most spatio-temporal complex systems is their non-ergodicity~(\cite{pumain2012urban}) (the property that cross-sectional samples in space are not equivalent to samples in time to compute statistics such as averages), what witnesses generally strong spatio-temporal path-dependencies in their trajectories. Similar to what Gell-Mann calls \emph{frozen accidents} in any complex system~\cite{gell1995quark}, a given configuration contains clues on past bifurcations, that can have had dramatic effects on the state of the system. 
+In spatially explicit simulation models, the non-linearity of local interactions is therefore very likely to sublimate small perturbations in the initial spatial setting, making it difficult to interprete the resulting global structures. \comment[JR]{je suis pour garder le passage sur la non-ergodicité (commenté ci-après) ; ça vous parait trop abstrait ?}\comment[MLT]{Non, mais je pense que la seconde phrase pourrait être reformulée/développée pour mieux raccrocher avec le reste, qu'en penses-tu?} A crucial aspect of most spatio-temporal complex systems is their non-ergodicity~(\cite{pumain2012urban}) (the property that cross-sectional samples in space are not equivalent to samples in time to compute statistics such as averages), what witnesses generally strong spatio-temporal path-dependencies in their trajectories. Similar to what Gell-Mann calls \emph{frozen accidents} in any complex system~\cite{gell1995quark}, a given configuration contains clues on past bifurcations, that can have had dramatic effects on the state of the system. 
 
-At initialisation, we then expect the spatial distribution of agents to influence results in the long run \cite{Castellanoetal2009}. Although this may seem obvious, cities are not regular grids of isotropic densities. Modelling may be about abstracting features to highlight processes in a way which is simpler than reality. However, the uniform grid which represents space in most simulation models is potentially not enough to represent urban processes because density and accessibility have environmental, economic and social consequences. An intermediate and more meaningful way of abstracting space might thus be to consider, not the peculiarities of every city, but their broad density structures. In Europe for example, one can find broad types of density distributions (\cite{LeNechet2015}). Secondly we expect spatial patterns to influence model outcomes because the agents' rule of action itself might depend on the spatial structure of the environment. Indeed, mechanisms of surrounding sensing will be impacted by different distributions of density. For example, agents tend to create buffer zones if they are allowed network-based rather than isotropic movements (\cite{Banos2012}), while the vision / sensing mechanism is sensitive to the scale of modelled environments (\cite{LauriJaggi2003, FossettDietrich2009}). Finally, households can have different preferences with respect to the built-environment (\cite{SpielmanHarrison2014}), thus creating a sensitivity to the initial form of the city modelled. 
+At initialisation, we then expect the spatial distribution of agents to influence results in the long run \cite{Castellanoetal2009}, as agents' rule of action itself might depend on the spatial structure of the environment: households can have different preferences with respect to the built-environment (\cite{SpielmanHarrison2014}), mechanisms of surrounding sensing are impacted by different distributions of density (\cite{Banos2012}) or the scale of modelled environments (\cite{LauriJaggi2003, FossettDietrich2009}), etc. The way modellers abstract space is therefore a central element of any spatially explicite simulation model. Although this may seem obvious, cities are not regular grids of isotropic densities. However, the uniform grid which represents space in most simulation models is potentially not enough to represent urban processes because density and accessibility have environmental, economic and social consequences. An intermediate and more meaningful way of abstracting space might thus be to consider, not the peculiarities of every city, but their broad density structures. In Europe for example, one can find broad types of density distributions (\cite{LeNechet2015}). 
 
-
-
-\paragraph{Considerations of urban form in simulation models}
-
+\paragraph{Previous considerations of urban form in simulation models}
 
 %\comment[FL]{Je pense que cette partie est vraiment utile, et devrait être étoffée, en procédant peut être à une typologie plus systématique des "initial condition" qui nous intéressent. Il y a déjà une différence entre l'hétérogénéité de l'espace (densités réparties mono ou poly, etc) et les différentes façons de représenter l'espace (grilles carrées, hexagones). Par ailleurs aussi des discussions sur l'incertitude de l'information (est ce que par exemple les emplois downscalés au carreau INSEE par Pivano 2016 c'est vraiment fiable ou très ?) et la précision de la grille} 
 
-The effect of the spatial configuration on area-based attributes of human behaviours has been largely discussed in geostatistics, meanly since the exposure of the Modifiable Areal Unit Problem (MAUP) \citep{Openshaw1984,FotheringhamWong1991}. Recently, \citet{Kwan2012} claims for a careful examination of what she coins the uncertain geographic context problem (UGCoP), that is of the spatial configuration of geographical units even if the size and delineation of the area are the same. Considerations of such issues in the geographic simulation model literature are rather scarce, but they have been some noticeable examples of papers attempting to evaluation the effects of the same set of mechanisms runned from different initial spatial conditions. Mainly, these approaches have been focusing on the impact of geo-localised input data accuracy, of the spatial system shape, precision, and boundaries, as well as of the impact of spatial heterogeneity.
+The effect of the spatial configuration on area-based attributes of human behaviours has been largely discussed in geostatistics, meanly since the exposure of the Modifiable Areal Unit Problem (MAUP) \citep{Openshaw1984,FotheringhamWong1991}. Recently, \citet{Kwan2012} claims for a careful examination of what she coins the uncertain geographic context problem (UGCoP), that is of the spatial configuration of geographical units even if the size and delineation of the area are the same. Considerations of such issues in the geographic simulation model literature are rather scarce, but they have been some noticeable examples of papers attempting to evaluate the effects of the same set of mechanisms runned from different initial spatial conditions. Mainly, these approaches have been focusing on the impact of geo-localised input data accuracy, of the spatial system shape, precision, and boundaries, as well as of the impact of spatial heterogeneity.
 
 \textbf{Geo-localised input data accuracy:} \citep{Thomasetal2017} show that data selection in LUTI model is interelated to the delineation of the spatial sytem boundaries and scale of analysis. They provide a few examples of how the use of Exploratory Spatial Data Analysis (ESDA) prior to simulation runs help avoiding measurement errors of model behaviour and outcomes.
-
 
 \textbf{Spatial system shape, precision, and boundaries:} \citet{FlacheHegselmann2001} show that chances for random emergence of a stable cluster of similar agents in a Schelling-like model are highest in a rectangular grid and lowest in a hexagonal grid and that an irregular (Voronoi-diagram) city lattice structure favours migration stabilisation around decentralised clusters of similar agents. \citet{Banos2012} compares the behaviour of Schelling segregation model on city lattices formalized as either grid, random, scale-free and Sierpinski networks and concludes that the presence of cliques in graph-based urban structures favor segregationist behaviours. \citet{LeTexierCaruso2017} simulate an individual-based dynamic model where agents move and exchange coins across regions. Using a set of different theoretical spatial systems, they demonstrate the impact of the regularity and aggregation levels, or centrality/periphery effects, on spatial diffusion dynamics.
 
@@ -86,7 +83,6 @@ The effect of the spatial configuration on area-based attributes of human behavi
 In this paper, we build on the contributions of these previous studies and go further by systematically measuring the impact of the city lattice on model behaviour so far only assessed through a small set of illustrative spatial structures. We illustrate the potential generalization of our approach by running two distinctive agent-based models: Schelling's model of residential segregation and Sugarscape.
 
 %The example of transportation networks is a good illustration, as their spatial shape and hierarchy is strongly influenced by past investment decisions, technical choices, or political decisions sometimes not rational~(\cite{zembri2010new}). Some aggregated indicators will not take into account positions and trajectories of each agent (such as segregation in the Schelling model) but others, as in the case of spatial patterns of accessibility in a system of cities, fully capture the path-dependency and may therefore be highly dependent of the initial spatial configuration. It is not clear for example what shifted the economical and political capital of France from Lyon to Paris in the early Middle Age, some assumptions being the reconfiguration of trade patterns from South to North of Europe and thus an increased centrality for Paris due to its spatial position: the bifurcation induced by socio-economic and political factors took a deep significance with worldwide repercussions until today when magnified by the spatial configuration. \comment[JR]{quelqu'un sait si d'une part c'est vrai et d'autre part si des references backupent ca ? - je sors ca completement du chapeau pour l'instant mais ça me semble intuitivement raisonnable et une bonne illustration.}[(MLT)L'idée de donner un exemple me semble bonne mais je ne suis pas sûre qu'on l'amène de la bonne manière? --> en fait je crois que l'on a pas besoin de ce paragraphe illustratif, ça complique le papier. Qu'en pensez-vous?]  [(FL) : illustrer par les transports c'est une bonne idée mais pas besoin de parler du moyen âge! la faible croissance de Dijon depuis 30 ans peut être une illustration tarte à la crême. mais pas sûr effectivement qu'on ait absolument besoin d'illustration, en tous cas il n'y en a pas dans le § d'avant (bientôt après ;o)]
-
 
 %%%%%%%%%%%%%%%%%%%%%%
 \section{Methods}
@@ -104,9 +100,8 @@ In this section, we detail the method developed to analyse the sensitivity of si
 %%%%%%%%%%%%%%%%%%%%%%
 \subsection{Constructing a spatial generator}
 
-
-Our spatial generator applies an urban morphogenesis model (\cite{Batty2007}), which has been generalised, explored and calibrated (\cite{Raimbault2014}). In a nutshell, grids are generated through an iterative process which adds a quantity $N$ (population) at each time step, allocating it through preferential attachment characterised by its strength of attraction $\alpha$. More precisely, each added unit has a probability equal to $P_i^{\alpha}/\sum_k P_k^{\alpha}$ to be added to patch $i$ with population $P_i$, all $N$ units being added independently and in parallel. At the end of each time step, this first growth process is then smoothed $n$ times using a diffusion process of strength $\beta$: each patch transmits an equal share of $\beta\cdot P_i$ to its extended neighborhood (8 surrounding patches). To avoid bord effects such as a reflexion on the border of the world, border patches diffuse to the outside.  The model stops when a fixed total population is reached. Grids are thus generated from the combination of the values of these four meta-parameters $\alpha$, $\beta$, $n$ and $N$, in addition to the random seed. To ease our exploration, only the distribution of density is allowed to vary rather than the size of the grid, which we fix to a 50x50 square environment of 100,000 units (cf. figure \ref{fig:spatialGen}). Typical value ranges for the other parameters are $\alpha\in\left[0.5,4.0\right]$, $\beta \in\left[0,0.3\right] $, $N\in \left[100,10000\right]$, $n\in\left[1,4\right]$.
-\comment{A detailler en incluant les equations de morphogenese}[(JR) j'ai détaillé le processus, c'est suffisant ?]
+Our spatial generator applies an urban morphogenesis model (\cite{Batty2007}), which has been generalised, explored and calibrated (\cite{Raimbault2014}). In a nutshell, grids are generated through an iterative process which adds a quantity $N$ (population) at each time step $t$, allocating it through preferential attachment characterised by its strength of attraction $\alpha$. More precisely, each added unit has a probability equal to $P_i^{\alpha}/\sum_k P_k^{\alpha}$ to be added to patch $i$ with population $P_i$, all $N$ units being added independently and in parallel. At the end of each time step, this first growth process is then smoothed $n$ times using a diffusion process of strength $\beta$: each patch transmits an equal share of $\beta\cdot P_i$ to its extended neighborhood (8 surrounding patches). To avoid border effects such as a reflexion on the border of the world, border patches diffuse to the outside. The model stops when a fixed total population \comment{n?} is reached. Grids are thus generated from the combination of the values of these four meta-parameters $\alpha$, $\beta$, $n$ and $N$, in addition to the random seed. To ease our exploration, only the distribution of density is allowed to vary rather than the size of the grid, which we fix to a 50x50 square environment of 100,000 units (cf. figure \ref{fig:spatialGen}). Typical value ranges for the other parameters are $\alpha\in\left[0.5,4.0\right]$, $\beta \in\left[0,0.3\right] $, $N\in \left[100,10000\right]$, $n\in\left[1,4\right]$.
+\comment{A detailler en incluant les equations de morphogenese}[(JR) j'ai détaillé le processus, c'est suffisant ?]\comment[MLT]{Il me semble que l'on pourrait mieux expliciter la relation N/n (et peut-être du coup inverser N et n). Plus il me semble que l'on devrait dire plus clairement à quoi se réfère alpha : à une cellule $i$? au pas de temps $t$? Pourquoi ne pas indexer alpha? Enfin, je crois que l'on gagnerait encore plus en clarté si on expliquait formellement comment tous les paramètres sont reliés entre eux, notamment pour expliquer l'arrêt de la procédure d'attribution d'une nouvelle pop à la grille.}
 
 
 
@@ -129,7 +124,7 @@ In order to generate density grids which correspond to empirical density distrib
 %%%%%%%%%%%%%%%%%%%%%%
 \subsection{Comparing Phase Diagrams}
 
-In order to test for the influence of spatial initial conditions, we need a systematic method to compare phase diagrams. Indeed, we have as many phase diagrams than we have spatial grids, what makes a qualitative visual comparison not realistic. A solution is to use systematic quantitative procedures. To our knowledge there exist no well established method to compare phase diagrams in agent-based modeling and geosimulation literature. Several potential methods from other fields such as environmental science could be used, but we keep it simple and such methodological considerations are furthermore auxiliary to the main purpose of this paper. we propose therefore an intuitive measure corresponding to the share of between-diagrams variability relative to their internal variability. More formally, the distance is given by
+In order to test for the influence of spatial initial conditions, we need a systematic method to compare phase diagrams. Indeed, we have as many phase diagrams than we have spatial grids, what makes a qualitative visual comparison not realistic. A solution is to use systematic quantitative procedures. To our knowledge there exist no well established method to compare phase diagrams in agent-based modeling and geosimulation literature. Several potential methods from other fields such as environmental science could be used, but we keep it simple and such methodological considerations are furthermore auxiliary to the main purpose of this paper. We propose therefore an intuitive measure corresponding to the share of between-diagrams variability relative to their internal variability. More formally, the distance is given by
 
 \begin{equation}\label{eq:phase-distance}
 d_r\left(\alpha_1,\alpha_2\right) = 2 \cdot \frac{d(f_{\vec{\alpha_1}},f_{\vec{\alpha_2}})^2}{Var\left[f_{\vec{\alpha_1}}\right] + Var\left[f_{\vec{\alpha_2}}\right]}
@@ -137,7 +132,7 @@ d_r\left(\alpha_1,\alpha_2\right) = 2 \cdot \frac{d(f_{\vec{\alpha_1}},f_{\vec{\
 
 where $f_{\vec{\alpha}}(\vec{x})$ is the phase diagrams on parameters $\vec{x}$ at given meta-parameters $\vec{\alpha}$. $d$ is a functional distance that we take simply as Euclidian distance. The variances are estimated within each phase diagram $f_{\vec{\alpha_i}}$.
 
-\comment[JR]{j'ai simplifié au max}
+\comment[JR]{j'ai simplifié au max}\comment[mLT]{Attention, on utilise alpha plus haut.}
 
 %%%%%%%%%%%%%%%%%%%%%%
 \subsection{Model Exploration Workflows as an meta-sensitivity analysis method}
@@ -148,21 +143,17 @@ The last methodological point which we need to emphasis is the relation between 
 \section{Application cases}
 %%%%%%%%%%%%%%%%%%%%%%
 
-We use our set of initial density grids in two ``classical'' spatial simulation models: Schelling and Sugarscape.
-
+In this section, we briefly recall the main components of the two ``classical'' agent-based simulation models used to test how spatial density variations may impact simulation models behaviour and results, and how general the method proposed is.
 
 %%%%%%%%%%%%%%%%%%%%%%
 \subsection{Schelling's model of residential segregation}
 
-Schelling's model consists in a abstract urban housing market where agents of different nature sense their environment, evaluate their satisfaction in terms of neighbourhood composition, and relocate if unsatisfied. It has been shown by \cite{Schelling1969} that even tolerant agents tended to produce segregated patterns because of the complexity of their local interactions. The main parameters of this model are the tolerance level (\% of agents similar to {\it ego}), the scope of sensing and the percentage of vacant spaces in the housing market. In addition, we are interested in testing the impact of the spatial distribution of housing capacity in this project, using the generated grids. \comment[MLT]{Dans le paragraphe sur Sugarscape on parle du diagramme de phase que l'on étudie en sortie, pas ici. On harmonise dans quel sens?}
-
-
-
+Schelling's model consists in an abstract urban housing market where agents of different nature sense their environment, evaluate their satisfaction in terms of neighbourhood composition, and relocate if unsatisfied. It has been shown by \cite{Schelling1969} that even tolerant agents tended to produce segregated patterns because of the complexity of their local interactions. The main parameters of this model are the tolerance level (\% of agents similar to {\it ego}), the scope of sensing and the percentage of vacant spaces in the housing market. In addition, we are interested in testing the impact of the spatial distribution of housing capacity in this project, using the generated grids. \comment{We extend the implementation of... The outcome of the model is measured as a phase diagram of segregation level (Dissimilarity, Moran's I, Entropy, Exposure, all four of them?). .}
 
 %%%%%%%%%%%%%%%%%%%%%%
 \subsection{Sugarscape model of resource extraction and population settlement}
 
-Sugarscape is a model of resource extraction which simulates the unequal distribution of wealth within a heterogenous population (\cite{EpsteinAxtell1996}). Agents of different vision scopes and different metabolisms harvest a self-regenerating resource available heterogeneously in the initial landscape, they settle and collect this resource, which leads some of them to survive and others to perish. The main parameters of this model are the number of agents, their minimal and maximal resource. In addition, we are interested in testing the impact of the spatial distribution of the resource in this project, using the generated grids. The outcome of the model is measured as a phase diagram of an index of inequality for ressource distribution (Gini index). We extend the implementation with agents wealth distribution of~\cite{li2009netlogo}.
+Sugarscape is a model of resource extraction which simulates the unequal distribution of wealth within a heterogenous population (\cite{EpsteinAxtell1996}). Agents of different vision scopes and different metabolisms harvest a self-regenerating resource available heterogeneously in the initial landscape, they settle and collect this resource, which leads some of them to survive and others to perish. The main parameters of this model are the number of agents, their minimal and maximal resource. In addition, we are interested in testing the impact of the spatial distribution of the resource in this project, using the generated grids. We extend the implementation with agents wealth distribution of~\cite{li2009netlogo}. The outcome of the model is measured as a phase diagram of an index of inequality for ressource distribution (Gini index). 
 
 
 %%%%%%%%%%%%%%%%%%%%%%
