--- a/paper.tex
+++ b/paper.tex
@@ -60,7 +60,7 @@ In this paper, we suggest tackling sensitivity to spatial conditions by generati
 %%%%%%%%%%%%%%%%%%%%%%
 \subsection{Why spatial patterns are expected to impact social simulations}
 
-An urban system consists of a large number of social agents that interact with each other at a microscopic level in a system-time that evolves irreversibly creating temporal and cumulative effects. Self-organization has been shown to be a central feature of urban systems~\citep{AllenSanglier1981,Portugali2000}, and emergent properties at qualitatively differentiated scales~\citep{AzizAlaouiBertelle2009} must be obtained through simulation methods~\citep{Wu2002,Batty2007}. In that frame, complexity is partially due to bifurcations \citep{Wilson1981} which are determinant in spatial systems~\citep{Wilson2002}. In spatially explicit simulation models, the non-linearity of local interactions is therefore very likely to sublimate small perturbations in the initial spatial setting, making it difficult to interprete the resulting global structures. \comment[JR]{je suis pour garder le passage sur la non-ergodicité (commenté ci-après) ; ça vous parait trop abstrait ?}\comment[MLT]{Non, mais je pense que la seconde phrase pourrait être reformulée/développée pour mieux raccrocher avec le reste, qu'en penses-tu?}
+An urban system consists of a large number of social agents that interact with each other at a microscopic level in a system-time that evolves irreversibly creating temporal and cumulative effects. Self-organization has been shown to be a central feature of urban systems~\citep{AllenSanglier1981,Portugali2000}, and emergent properties at qualitatively differentiated scales~\citep{AzizAlaouiBertelle2009} must be obtained through simulation methods~\citep{Wu2002,Batty2007}. In that frame, complexity is partially due to bifurcations \citep{Wilson1981} which are determinant in spatial systems~\citep{Wilson2002}. In spatially explicit simulation models, the non-linearity of local interactions is therefore very likely to sublimate small perturbations in the initial spatial setting, making it difficult to interpret the resulting global structures. \comment[JR]{je suis pour garder le passage sur la non-ergodicité (commenté ci-après) ; ça vous parait trop abstrait ?}\comment[MLT]{Non, mais je pense que la seconde phrase pourrait être reformulée/développée pour mieux raccrocher avec le reste, qu'en penses-tu?}
  % A crucial aspect of most spatio-temporal complex systems is their non-ergodicity~(\cite{pumain2012urban}) (the property that cross-sectional samples in space are not equivalent to samples in time to compute statistics such as averages), what witnesses generally strong spatio-temporal path-dependencies in their trajectories. Similar to what Gell-Mann calls \emph{frozen accidents} in any complex system~\cite{gell1995quark}, a given configuration contains clues on past bifurcations, that can have had dramatic effects on the state of the system. 
 
 At initialisation, we then expect the spatial distribution of agents to influence results in the long run \cite{Castellanoetal2009}. Although this may seem obvious, cities are not regular grids of isotropic densities. Modelling may be about abstracting features to highlight processes in a way which is simpler than reality. However, the uniform grid which represents space in most simulation models is potentially not enough to represent urban processes because density and accessibility have environmental, economic and social consequences. An intermediate and more meaningful way of abstracting space might thus be to consider, not the peculiarities of every city, but their broad density structures. In Europe for example, one can find broad types of density distributions (\cite{LeNechet2015}). Secondly we expect spatial patterns to influence model outcomes because the agents' rule of action itself might depend on the spatial structure of the environment. Indeed, mechanisms of surrounding sensing will be impacted by different distributions of density. For example, agents tend to create buffer zones if they are allowed network-based rather than isotropic movements (\cite{Banos2012}), while the vision / sensing mechanism is sensitive to the scale of modelled environments (\cite{LauriJaggi2003, FossettDietrich2009}). Finally, households can have different preferences with respect to the built-environment (\cite{SpielmanHarrison2014}), thus creating a sensitivity to the initial form of the city modelled. 
